# Assets-Holder-Pallet-Example

./: Cargo.toml  zombienet.toml
pallets/freeze-template/: Cargo.toml
pallets/freeze-template/src/: lib.rs  mock.rs  tests.rs
pallets/hold-template/: Cargo.toml
pallets/hold-template/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  tests.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
