[package]
name = "pallet-parachain-template"
description = "FRAME pallet template for defining custom runtime logic."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
scale-info = { features = ["derive"], workspace = true }
primitives = { workspace = true, default-features = false }

[dev-dependencies]
polkadot-sdk = { workspace = true, features = ["pallet-balances", "pallet-assets", "pallet-assets-holder"], default-features = false }


[features]
default = ["std"]
runtime-benchmarks = ["frame/runtime-benchmarks"]
std = ["codec/std", "frame/std", "scale-info/std", "primitives/std", "polkadot-sdk/std"]
try-runtime = ["frame/try-runtime"]
